<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="trustme">I trust this server</string>
    <string name="app_name">MoneyTracker</string>
	<string name="add_profile_title">Add an Account</string>
	<string-array name="add_profile_options">
		<item>Search a list of providers</item>
		<item>Manually enter a provider</item>
	</string-array>
	<string name="account_list_title">Account List</string>
	<string name="enter_profile_title">Enter Institution Information</string>
	<string name="enter_profile_name">Name of this institution:</string>
	<string name="enter_profile_help">You can often get the following information from your institution by calling their customer service number and asking how to login to their OFX or \&quot;Quicken\&quot; service.</string>
	<string name="enter_profile_loc_title">Location</string>
	<string name="enter_profile_url_help">This looks like a website location, it is not your institution\&apos;s home page</string>
	<string name="enter_profile_url">OFX Url:</string>
	<string name="enter_profile_fi_needed">My institution requires more info</string>
	<string name="enter_profile_fiorg">FI Org:</string>
	<string name="enter_profile_fiid">FI Id:</string>
	<string name="enter_profile_app_needed">My institution requires a specific client</string>
	<string name="enter_profile_app_name">Name:</string>
	<string name="enter_profile_app_ver">Version:</string>
	<string name="enter_profile_adv_title">Advanced Options</string>
	<string name="enter_profile_adv_help">You should not need to change these</string>
	<string name="enter_profile_ver_title">OFX Protocol to use:</string>
	<string name="enter_profile_ver_prompt">Select OFX Protocol</string>
	<string-array name="enter_profile_ver_options">
		<item>Autodetect (default)</item>
		<item>Force Version 1.X</item>
		<item>Force Version 2.X</item>
	</string-array>
	<string name="enter_profile_simple_prof">Ignore profile (force simple user/pass)</string>
	<string name="select_profile_title">Select Institution</string>
	<string name="download_progress">Downloading an updated list of institutions.  This may take a few minutes.</string>
	<string name="verify_profile_title">Do you trust this site to give your info to?</string>
	<string name="negotiate_progress">Attempting to contact the selected financial institution</string>
	<string name="verify_profile_cert_help">The following is the <b>verified name</b> of the server you are connecting to, <b>DO NOT CONTINUE</b> if this does not describe your financial institution (or the name is only a web address).</string>
	<string name="verify_profile_site">Address:</string>
	<string name="verify_profile_expires">Expires:</string>
	<string name="verify_profile_issuer">Verified By:</string>
	<string name="verify_profile_profile_help">The following is provided by the server for informational purposes only and has not been verified.</string>
	<string name="verify_profile_prof_name">Name:</string>
	<string name="verify_profile_prof_addr">Address:</string>
	<string name="verify_profile_prof_csphone">Cust Support:</string>
	<string name="verify_profile_prof_tsphone">Tech Support:</string>
	<string name="verify_profile_prof_faxphone">Fax:</string>
	<string name="verify_profile_prof_url">Web:</string>
	<string name="verify_profile_prof_email">Email:</string>
	<string name="realm_login_title">Choose the area to login to</string>
	<string-array name="message_set">
		<item>Login</item>
		<item>Create Account</item>
		<item>Bank Accounts</item>
		<item>Credit Cards</item>
		<item>Loans</item>
		<item>Investments</item>
		<item>Funds Transfers</item>
		<item>Wire Transfers</item>
		<item>Bill Payments</item>
		<item>Emails</item>
		<item>Investment Securities</item>
		<item>Biller Directory</item>
		<item>Bill Delivery</item>
		<item>Information</item>
		<item>Image Download</item>
	</string-array>
	<string-array name="acct_types">
		<item>Bank Account</item>
		<item>Credit Card</item>
		<item>Loan</item>
	</string-array>
	<string name="login_title">Enter login information</string>
	<string-array name="mfa_phrases">
		<item />
		<item>City of birth</item>
		<item>Date of birth MM/DD/YYYY</item>
		<item>Debit card number</item>
		<item>Father\&apos;s middle name</item>
		<item>Favorite color</item>
		<item>First pet\&apos;s name</item>
		<item>Five digit ZIP code</item>
		<item>Grandmother\&apos;s maiden name on your father\&apos;s side</item>
		<item>Grandmother\&apos;s maiden name on your mother\&apos;s side</item>
		<item>Last four digits of your cell phone number</item>
		<item>Last four digits of your daytime phone number</item>
		<item>Last four digits of your home phone number</item>
		<item>Last four digits of your social security number</item>
		<item>Last four digits of your Tax ID</item>
		<item>Month of birth of youngest sibling (do not abbreviate)</item>
		<item>Mother\&apos;s maiden name</item>
		<item>Mother\&apos;s middle name</item>
		<item>Name of the company where you had your first job</item>
		<item>Name of the manufacturer of your first car</item>
		<item>Name of your high school football team, do not include high school name, e.g. \&quot;Beavers\&quot; rather than \&quot;Central High Beavers\&quot;</item>
		<item>Recent deposit or recent withdrawal amount</item>
		<item>Year of birth, use YYYY</item>
	</string-array>
	<string name="login_id">Login name:</string>
	<string name="login_pass">Password or PIN:</string>
	<string name="login_pwtype_onetime">One-time password given by your bank:</string>
	<string name="login_pwtype_hwtoken">Code from your keyfob or similar device:</string>
	<string name="login_progress">Attempting to login</string>
	<string name="select_acct_title">Select Account</string>
	<string name="account_list_progress">Querying server for account list</string>
</resources>
